--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,11 @@
         <script src="https://unpkg.com/hyperscript.org@0.9.11"></script>
         <script src="https://unpkg.com/htmx.org/dist/ext/json-enc.js"></script>
         <title>Old Is Cool</title>
-        <link href="css/style.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <style>
-        ul {
-            list-style-type: none;
-        }
-        </style>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body style="height:100%;">
-        <div id="folders" style="height:100%;" hx-trigger="load" hx-get="/start" hx-swap="outerHTML" hx-target="#folders"></div>
+        <div id="folders" style="height:100%;" hx-trigger="load" hx-get="/folders" hx-swap="outerHTML" hx-target="#folders"></div>
     </body>
 </html>
